[Bug #20979] [DOC] Add a proviso to `+comment` option